feat: Adiciona funcionalidade de compra de navios e inicializa rotas e portos no jogo
- Implementa a lógica para compra de navios, incluindo verificação de saldo e quantidade disponível.
- Adiciona inicialização de portos e rotas no DataInitializer, com rotas mapeadas entre portos.
- Atualiza a interface do usuário para incluir botão de compra de navios e regras do jogo.
- Refatora serviços e controladores para suportar novas funcionalidades e comunicação via WebSocket.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,9 @@
                     <button class="btn btn-secondary" onclick="getRandomQuestion()" id="questionBtn" disabled>
                         <i class="fas fa-question-circle"></i> Nova Pergunta
                     </button>
+                    <button class="btn btn-secondary" onclick="buyShips()" id="buyShipsBtn" disabled>
+                        <i class="fas fa-ship"></i> Comprar Navios
+                    </button>
                     <button class="btn btn-success" onclick="nextTurn()" id="nextTurnBtn" disabled>
                         <i class="fas fa-forward"></i> Próximo Turno
                     </button>
@@ -68,6 +71,11 @@
                         <p style="text-align: center; color: #718096; font-style: italic;">
                             Nenhuma partida ativa
                         </p>
+                    </div>
+                    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #e2e8f0; text-align: center;">
+                        <a href="regras.html" target="_blank" style="color: #667eea; text-decoration: none; font-size: 0.9rem; display: inline-flex; align-items: center; gap: 5px;">
+                            <i class="fas fa-book"></i> Regras do Jogo
+                        </a>
                     </div>
                 </div>
             </div>
