--- a/src/main/resources/static/regras.html
+++ b/src/main/resources/static/regras.html
@@ -25,6 +25,10 @@
 
         <div class="section">
             <h2><i class="fas fa-play-circle"></i> Como Jogar</h2>
+
+            <div style="background: #fff5f5; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #e53e3e;">
+                <p style="margin-bottom: 0; color: #c53030; font-weight: 500;"><strong>⚠️ Importante:</strong> Cada jogador deve estar em uma aba ou janela diferente do navegador para jogar e entrar na partida.</p>
+            </div>
             
             <p style="margin-bottom: 20px; font-size: 1.05rem;">No seu turno você pode fazer <strong>1 das 3 ações</strong> abaixo:</p>
 
